; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_write_set_format_7zip.c_file_register_empty.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_write_set_format_7zip.c_file_register_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._7zip = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.file** }
%struct.file = type { %struct.file* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct._7zip*, %struct.file*)* @file_register_empty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @file_register_empty(%struct._7zip* %0, %struct.file* %1) #0 {
  %3 = alloca %struct._7zip*, align 8
  %4 = alloca %struct.file*, align 8
  store %struct._7zip* %0, %struct._7zip** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %5 = load %struct.file*, %struct.file** %4, align 8
  %6 = getelementptr inbounds %struct.file, %struct.file* %5, i32 0, i32 0
  store %struct.file* null, %struct.file** %6, align 8
  %7 = load %struct.file*, %struct.file** %4, align 8
  %8 = load %struct._7zip*, %struct._7zip** %3, align 8
  %9 = getelementptr inbounds %struct._7zip, %struct._7zip* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load %struct.file**, %struct.file*** %10, align 8
  store %struct.file* %7, %struct.file** %11, align 8
  %12 = load %struct.file*, %struct.file** %4, align 8
  %13 = getelementptr inbounds %struct.file, %struct.file* %12, i32 0, i32 0
  %14 = load %struct._7zip*, %struct._7zip** %3, align 8
  %15 = getelementptr inbounds %struct._7zip, %struct._7zip* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  store %struct.file** %13, %struct.file*** %16, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
